# avrp-studygen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  config_factories.cxx  config_factories.h  configurations.hxx  image_helpers.cxx  image_helpers.h  main.cxx  mesh_helpers.cxx  mesh_helpers.h  model_gen.cxx  study_generator.cxx  study_generator.h
src/generator/: CMakeLists.txt  config_factories.cxx  config_factories.h  configurations.hxx  mesh_processor.hxx  study_generator.cxx  study_generator.h  study_generator_data.hxx  usage.hxx
src/generator/model_generator/: abstract_model_generator.hxx  integrated_multi_label_model_generator.hxx
src/logic/: CMakeLists.txt  mesh_processor.cxx  mesh_processor.h  mesh_processor.hxx  study_generator_data.hxx
src/static/: example_label_config.json
src/util/: CMakeLists.txt  cl_helper.hxx  common.h  common.hxx  config_factories.cxx  config_factories.h  configurations.hxx  crop_image.cxx  crop_image_4d.cxx  format_exception.hxx  image_helpers.cxx  image_helpers.h  image_helpers.hxx  image_to_mesh.cxx  itk_oriented_ras_image.hxx  mesh_helpers.cxx  mesh_helpers.h  mesh_helpers.hxx  smooth_bimage.cxx  usage.hxx
testing/: CMakeLists.txt  test_main.cxx
testing/data/: label_config_01.json  test_label_config.json
testing/scripts/: test_cli.sh  test_model-gen.sh
